Persistent Storage permission request is not triggering any calls to onAndroidPermissionsRequest neither onContentPermissionRequest
Categories
(GeckoView :: General, defect, P1)
Tracking
(firefox-esr60 wontfix, firefox65 wontfix, firefox66 wontfix, firefox67 wontfix, firefox68 fixed)
People
(Reporter: amejia, Assigned: fluffyemily)
References
()
Details
(Whiteboard: [geckoview:fenix:m5])
Attachments
(1 file)
When a site is requesting Persistent Storage permission, geckoView is not calling
onAndroidPermissionsRequest
neither onContentPermissionRequest
.
You can reproduce it on GeckoView Sample App.
Updated•6 years ago
|
Comment 1•6 years ago
|
||
A-C plans to complete their site permissions API in M3, so GV should fix permissions bugs in M3. This bug might be a dupe of bug 1527716.
https://github.com/mozilla-mobile/android-components/issues/1818
Assignee | ||
Updated•6 years ago
|
Assignee | ||
Comment 2•6 years ago
|
||
Persistent Storage on http://permission.site seems to be broken. On all Firefox browsers, including desktop I am getting the error: JavaScript Error: "TypeError: navigator.storage is undefined" {file: "http://permission.site/index.js" line: 289
, whereas on Chrome I am getting the error Uncaught TypeError: Cannot read property 'persist' of undefined at HTMLButtonElement.persistent-storage (index.js:289)
.
I am looking for another site with which to test whether Persistent storage requests are behaving as expected.
Assignee | ||
Comment 3•6 years ago
|
||
Yup, http://permission.site is calling navigator.storage.persist() whereas the correct way to request storage permissions is navigator.permissions.query({name: "persistent-storage"})
.
Assignee | ||
Comment 4•6 years ago
|
||
Yup, it looks like we'e not getting native prompt requests for "persistent-storage" permissions. These permission requests are bypassing the Java code and GeckoViewPermissions.js
entirely. I am starting to look into what will need to be done to support persistent-storage permission prompting in GV.
Comment 5•6 years ago
|
||
I think I just hit this in FxR. What we are seeing is we get the gecko permission prompt before we get the system prompt. If I approve the gecko permission request I then seen the system permission request. See https://github.com/MozillaReality/FirefoxReality/pull/984#issuecomment-469831050
Comment 6•6 years ago
|
||
FxR is currently using 67.0.20190203095148
build of GeckoView Nightly.
Assignee | ||
Comment 7•6 years ago
|
||
:rbarker are the permissions requests for FxR coming from websites, or via some other means? I'm currently only looking at site permissions at the moment and the more I look into this the more I feel that GV shouldn't be implementing PersistentStorage site permissions.
Comment 8•6 years ago
|
||
(In reply to Emily Toop (:fluffyemily) from comment #7)
:rbarker are the permissions requests for FxR coming from websites, or via some other means? I'm currently only looking at site permissions at the moment and the more I look into this the more I feel that GV shouldn't be implementing PersistentStorage site permissions.
As discussed in GV triage, I don't believe FxR will need per site Persistent Storage permissions at this time.
Comment 9•6 years ago
|
||
Deferring this Persistent Storage permission bug to Fenix M5 because it is not urgent for Fenix at this time.
Assignee | ||
Comment 10•6 years ago
|
||
Comment 11•6 years ago
|
||
67=wontfix. Fenix MVP will use GeckoView 68, so we don't need to uplift this fix to 67 Beta unless it also affects Fennec 67.
Comment 12•6 years ago
|
||
Comment 13•6 years ago
|
||
bugherder |
Updated•6 years ago
|
Description
•