Bug 1527074 - Expose storage manager API to GeckoView r=geckoview-reviewers,snorp

Differential Revision: https://phabricator.services.mozilla.com/D25408